# Singularity

./: .dockerignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  singularity.yaml  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ENHANCEMENT_REPORT.yml
docs/: configuration.md  install.md  preconfigured-pages.md  themes.md
scripts/: install-linux.sh
src/: glance.rs  main.rs  singularity.rs
src/assets/static/: main-built.css  main.css  manifest.json
src/assets/svgs/: clear_day.html  cloudy.html  drizzle.html  fog.html  heavy_rain.html  heavy_snow.html  moderate_rain.html  moderate_snow.html  overcast.html  snow.html  thunder.html
src/assets/templates/: calendar.html  calender.html  clock.html  column.html  document.html  header.html  home.stpl  page.html  test.html  weather.html  youtube-vid.html  youtube.html
src/feed/: calendar_data.rs  clock_data.rs  header_data.rs  mod.rs  weather_data.rs  youtube_data.rs
src/internals/: cache.rs  mod.rs  port.rs  render.rs  singularity.rs
src/widgets/: calendar.rs  clock.rs  header.rs  mod.rs  weather.rs  youtube.rs
