[package]
name = "singularity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9"
thiserror = "1.0.63"

[[bin]]
name = "singularity"
path = "src/main.rs"
