[package]
name = "singularity"
version = "0.1.0"
edition = "2021"
description = "A dashboard to have all your stuff in one place, your Singularity"
homepage = "https://github.com/AMS003010/Singularity"
documentation = "https://github.com/AMS003010/Singularity"
repository = "https://github.com/AMS003010/Singularity"
keywords = ["dashboard", "self-hosted", "customize"]
categories = ["command-line-utilities"]
authors = ["Abhijith M S <abhijithmsaji132@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9"
thiserror = "1.0.63"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
dashmap = "5.4.0"
sysinfo = "0.29"
quick-xml = { version = "0.37", features = ["serialize"] }

[[bin]]
name = "singularity"
path = "src/main.rs"
